fix search trigger label alignment (#1315)

--- a/packages/webawesome/docs/assets/styles/docs.css
+++ b/packages/webawesome/docs/assets/styles/docs.css
@@ -408,6 +408,7 @@ wa-button#search-trigger {
     box-shadow: none;
   }
   &::part(label) {
+    text-align: start;
     width: 100%;
   }
 }
